--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,12 @@ MONODB_URI="mongodb+srv://kamran_db:kami1234@cluster0.dvhrwvn.mongodb.net"
 PORT=5000
 JWT_SECRET="km#secret"
 
+# cloudinary setting
+CLOUDINARY_CLOUD_NAME="ducpmjpfu"
+CLOUDINARY_API_KEY="555614814136841"
+CLOUDINARY_API_SECRET="B4GfnSYjNqcgBv3nWNc0vpXOfh8"
+
+
 
 
 
