--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-index": "node index.js"
+    
   },
   "type": "module",
   "keywords": [],
